--- a/in-linked/src/app/pages/login/login.component.html
+++ b/in-linked/src/app/pages/login/login.component.html
@@ -17,7 +17,7 @@
           <input name="user-password" type="password" class="form-control" id="user-password" [(ngModel)]="userPassword" #password="ngModel" required>
           <div class="login-warning-message" *ngIf="password.touched && password.errors?.required">Please enter a password.</div>
         </div>
-        <div class="row">
+        <div class="text-center">
           <button type="submit" class="btn btn-success" [disabled]="!login.form.valid">Submit</button>
         </div> 
       </form>
