--- a/in-linked/src/app/layouts/navbar/navbar.component.html
+++ b/in-linked/src/app/layouts/navbar/navbar.component.html
@@ -1,22 +1,30 @@
 <nav class="navbar fixed-top navbar-expand-sm navbar-dark">
-  <a class="navbar-brand" routerLink="./">{{ brandTitle }}</a>
-  <button class="navbar-toggler" (click)="toggleNavbar()" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+    <a class="navbar-brand" routerLink="./">{{ brandTitle }}</a>
+    <button class="navbar-toggler" (click)="toggleNavbar()" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse justify-content-around" [ngClass]="status ? 'show-nav' : 'hide-nav'" id="navbarSupportedContent">
-    <form class="navbar-form text-center search-form" role="search" #search="ngForm" (ngSubmit)="onSubmit()">
-        <div class="form-group">
-            <input type="search" class="form-control search-bar" placeholder="Search for an enterprise or candidate" name="search-query" [(ngModel)]="searchQuery">
-            <input class="btn btn-success search-submit" type="submit" value="Search">
+    <div class="collapse navbar-collapse justify-content-around" [ngClass]="status ? 'show-nav' : 'hide-nav'" id="navbarSupportedContent">
+        <form class="navbar-form text-center search-form" role="search" #search="ngForm" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+                <input type="search" class="form-control search-bar" placeholder="Search for an enterprise or candidate"
+                    name="search-query" [(ngModel)]="searchQuery">
+                <input class="btn btn-success search-submit" type="submit" value="Search">
+            </div>
+        </form>
+        <div class="navbar-right">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink="./{{ profileType }}/{{ profileName }}" #profileLinkRef>My Profile</a>
+                </li>
+                <li class="nav-item" *ngIf="profileType=='enterprise'">
+                    <a class="nav-link" routerLink="./job/viewjobs">View Jobs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" (click)="logout()">Logout</a>
+                </li>
+            </ul>
         </div>
-      </form>
-    <div class="navbar-right">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" routerLink="./{{ profileType }}/{{ profileName }}" #profileLinkRef>My Profile</a>
-        </li>
-      </ul>
     </div>
-  </div>
 </nav>
