feat(candidate-profile): Added update for profile picture and cover photo in candidate

--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -1,5 +1,5 @@
 <div class="container title-section">
-    <div class="cover-photo" [ngStyle]="{ 'background-image': 'url(' + (candidate)?.coverPhoto + ')'}">></div>
+    <div class="cover-photo" [ngStyle]="{ 'background-image': 'url(' + (candidate)?.coverPhoto + ')'}"></div>
     <img class="profile-photo" src="{{ (candidate)?.profilePicture }}">
     <div class="card card-move-up title-section">
         <div class="section-header">
