--- a/in-linked/src/app/pages/search-page/search-enterprises/search-enterprises.component.html
+++ b/in-linked/src/app/pages/search-page/search-enterprises/search-enterprises.component.html
@@ -3,7 +3,7 @@
     <li *ngFor="let result of searchService.searchEnterpriseResult" class="list-group-item list-group-item-action" (click)="navigateToEnterpriseProfile(result.username)">
       <div class="row">
         <div class="col-1">
-          <img class="inline-image" src="data:image/png;base64,{{result.profilePicture}}" onerror="this.src='../../../assets/dog-butt.png'">
+          <img class="inline-image" src="{{ result.profilePicture }}">
         </div>
         <div class="col">
           <a>
