--- a/in-linked/src/app/pages/user-feed/user-feed.component.html
+++ b/in-linked/src/app/pages/user-feed/user-feed.component.html
@@ -22,8 +22,12 @@
           </h5>
           <p class="card-text">Puppies deemed royalty at Black Gala event.</p>
           <img class="card-img" src="https://images.unsplash.com/photo-1539383000475-977eb7138545?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5c0044fa4f3d3db651234bf8e35f6e3a&auto=format&fit=crop&w=1050&q=80">
-          <input type="text" placeholder= "Add a comment">
-          <input type="submit" value="Post">
+          <div class="input-group mt-3">
+              <input type="text" class="form-control" placeholder="Write something...">
+              <div class="input-group-append">
+                <button class="btn btn-info" type="button">Post</button>
+              </div>
+            </div>
         </div>
       </div>
     </div>
