--- a/in-linked/src/app/pages/create-account/create-account.component.html
+++ b/in-linked/src/app/pages/create-account/create-account.component.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-3 col-form-label " for="user-email">Email</label>
+        <label class="col-3 col-form-label" for="user-email">Email</label>
         <div class="col">
           <input name="user-email" type="email" class="form-control" id="user-email" [(ngModel)]="userEmail" #email="ngModel"
             required>
@@ -38,10 +38,9 @@
         </div>
       </div>
 
-      <div class="form-row">
-        <div class="form-group col-3 ">
-          <label for="enterprise-radios"> Are you an enterprise? </label>
-          <div id="enteprise-radios">
+      <div class="form-group row">
+          <label class="col-3 col-form-label" for="enterprise-radios"> Are you an enterprise? </label>
+          <div id="enteprise-radios" class="col">
             <div class="form-check form-check-inline">
               <input class="form-check-input" type="radio" name="enterprise-check" id="yes-enterprise" [value]="true"
                 [(ngModel)]="enterpriseCheck">
@@ -53,15 +52,6 @@
               <label class="form-check-label" for="no-enterprise"> No </label>
             </div>
           </div>
-        </div>
-        <div class="form-group col">
-          <label class="education-level-label" for="education-level">Education Level</label>
-          <select name="education-level" class="form-control" [(ngModel)]="educationLevel" #education="ngModel">
-            <option [value]="level" *ngFor="let level of educationLevels">{{level}}</option>
-          </select>
-          <div class="create-warning-message" *ngIf="!enterpriseCheck && education.touched && !educationLevel">Please
-            select education level.</div>
-        </div>
       </div>
       <div class="text-center">
         <button type="submit" class="btn btn-success" [disabled]="!create.form.valid">Submit</button>
