feat(search-jobs.component.html): Fixed issue where it showed resource not found when clicking on links

--- a/in-linked/src/app/pages/search-page/search-jobs/search-jobs.component.html
+++ b/in-linked/src/app/pages/search-page/search-jobs/search-jobs.component.html
@@ -62,7 +62,7 @@
                     <img class="inline-image" src="{{job.enterprise.profilePicture}}">
                 </div>
                 <div class="col">
-                    <a class="btn-block" href="/dashboard/job/{{job.job.jobId}}">
+                    <a class="btn-block" routerLink="/dashboard/job/{{job.job.jobId}}">
                         {{ job.job.jobTitle }}
                         <br>
                         {{ job.enterprise.enterpriseName }}
@@ -81,7 +81,7 @@
                         <img class="inline-image" src="{{job.enterprise.profilePicture}}">
                     </div>
                     <div class="col">
-                        <a class="btn-block" href="/dashboard/job/{{job.job.jobId}}">
+                        <a class="btn-block" routerLink="/dashboard/job/{{job.job.jobId}}">
                             {{ job.job.jobTitle }}
                             <br>
                             {{ job.enterprise.enterpriseName }}
