feat(error.component.ts): Button text now updates depending on if the user is logged in or not

--- a/in-linked/src/app/pages/error/error.component.html
+++ b/in-linked/src/app/pages/error/error.component.html
@@ -5,6 +5,6 @@
   <h1 class="placeholder-title">Request resource not found.</h1>
 
   <div class="placeholder-commands center">
-    <button routerLink='{{ link }}'>To Dashboard</button>
+    <button class="btn btn-info" routerLink='{{ link }}' #redirect>To Dashboard</button>
   </div> 
 </div>
