feaet(candidate-profile.component.html): Added contact field with option to display info

--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
@@ -28,7 +28,7 @@
 .education:last-child,
 .experience:last-child {
     hr {
-        border-color: transparent;
+        display: none;
     }
 }
 
