--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -106,6 +106,26 @@
     </div>
 </div>
 
+<div class="container information-container">
+    <div class="card information-card">
+        <div class="section-header">
+            <div class="h2 section-title">Contact</div>
+        </div>
+
+        <ng-template [ngIf]="(candidate)?.displayEmail" [ngIfElse]="emailHidden">
+            <p class="mb-1"><strong>Email</strong></p>
+            <p class="text-secondary mb-2">{{ (candidate)?.email }}</p>
+        </ng-template>
+
+        <ng-template #emailHidden>
+            <div class="placeholder">
+                <h3 class="text-center">Contact Info Hidden</h3>
+            </div>
+        </ng-template>
+
+    </div>
+</div>
+
 <div *ngIf="isCurrentUser" class="container information-container">
     <div class="card text-center">
         <app-candidate-delete-modal></app-candidate-delete-modal>
