--- a/in-linked/src/global/_colors.scss
+++ b/in-linked/src/global/_colors.scss
@@ -1,10 +1,12 @@
 /* Map color name to Hex */
 
 $blue-ribbon: #0066FF;
+$lochmara: #007fc0;
 $gallery: #ededed;
 $tundora: #424242;
 $whisper: #f5f5fA;
 $pickled-bluewood: #2d3c55;
+$porcelain: #f7f8f9;
 
 $blue-dianne: #213b4f;
 $chathams-blue: #153c8a;
