chore(title-section-modal): Added warning for changing email for candidate and enterprise

--- a/in-linked/src/app/pages/candidate-profile/title-section-modal/title-section-modal.component.html
+++ b/in-linked/src/app/pages/candidate-profile/title-section-modal/title-section-modal.component.html
@@ -24,6 +24,7 @@
       <div class="form-row">
         <div class="form-group col-9">
           <label for="candidate-email">Email Address</label>
+          <div class="text-danger">WARNING: changing your email will log you out!</div>
           <input name="email" type="text" class="form-control" id="candidate-email" placeholder="john.smith@email.com" [(ngModel)]="email">
         </div>
         <div class="form-group col-3 text-center">
