--- a/in-linked/src/app/pages/enterprise-profile/title-section-modal/title-section-modal.component.html
+++ b/in-linked/src/app/pages/enterprise-profile/title-section-modal/title-section-modal.component.html
@@ -18,6 +18,7 @@
       </div>
       <div class="form-group">
         <label for="enterprise-email">Email Address</label>
+        <div class="text-danger">WARNING: changing your email will log you out!</div>
         <input name="email" type="text" class="form-control" id="enterprise-email" placeholder="john.smith@email.com"
           [(ngModel)]="email">
       </div>
