--- a/in-linked/src/app/pages/job/job-delete-modal/job-delete-modal.component.html
+++ b/in-linked/src/app/pages/job/job-delete-modal/job-delete-modal.component.html
@@ -1,6 +1,6 @@
 <ng-template #content let-d="dismiss">
     <div class="modal-header">
-        <h4 class="modal-title" id="job-company-details-section">Delete Account</h4>
+        <h4 class="modal-title" id="job-company-details-section">Delete Job Posting</h4>
         <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
