feat(title-section-modal.component.ts): Fixed image upload where updating cover photo does not work for enterprise

--- a/in-linked/src/app/pages/enterprise-profile/enterprise-profile.component.scss
+++ b/in-linked/src/app/pages/enterprise-profile/enterprise-profile.component.scss
@@ -5,6 +5,11 @@
     margin-left: -195px;
 }
 
+.profile-photo {
+    height: 175px;
+    width: 175px;
+}
+
 .information-container:last-child {
     margin-bottom: 2rem;
 }
