feat(company-details-section-modal.component.ts): Fixed bug where updating enterprise info did not work, updated UI

--- a/in-linked/src/app/pages/job/job.component.html
+++ b/in-linked/src/app/pages/job/job.component.html
@@ -7,13 +7,13 @@
             <div class="col-md col-sm-12">
                 <h4>{{ (job)?.jobTitle || 'Unavailable job title...'  | titlecase}}</h4>
                 <br>
-                <h5> {{ (enterprise)?.enterpriseName || 'Unavailable Enterprise...' | titlecase }} </h5>
-                <h5 class="d-inline" *ngIf="(job)?.city"> {{ (job)?.city + ', ' | titlecase}} </h5>
-                <h5 class="d-inline" *ngIf="(job)?.province"> {{ (job)?.province + ', '| titlecase}} </h5>
-                <h5 class="d-inline" *ngIf="(job)?.country"> {{ (job)?.country| titlecase}}</h5>
+                <h5> {{ (enterprise)?.enterpriseName || 'Unavailable Enterprise...' | titlecase }}</h5>
+                <h5 class="d-inline" *ngIf="(job)?.city"> {{ (job)?.city + ',' | titlecase}}</h5>
+                <h5 class="d-inline" *ngIf="(job)?.province"> {{ ((job)?.province.length <= 2) ? ((job)?.province | uppercase) : ((job)?.province | titlecase) }},</h5>
+                <h5 class="d-inline" *ngIf="(job)?.country"> {{ ((job)?.country.length <= 2) ? ((job)?.country | uppercase) : ((job)?.country | titlecase) }}</h5>
             </div>
             <div class="col-md-3 col-sm-12 text-right">
-                <a *ngIf="(job)?.jobUrl" routerLink="{{(job)?.jobUrl}}" class="btn btn-primary" role="button" target="_blank"> Apply Externally </a>
+                <a *ngIf="(job)?.jobUrl" href={{(job)?.jobUrl}} class="btn btn-primary" role="button" target="_blank"> Apply Externally </a>
                 <div *ngIf="isCurrentEnterprise" class="section-edit">
                     <app-job-modal (jobUpdated)="onJobUpdate($event)"></app-job-modal>
                 </div>
