--- a/in-linked/src/app/layouts/navbar/navbar.component.html
+++ b/in-linked/src/app/layouts/navbar/navbar.component.html
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse justify-content-around" [ngClass]="status ? 'show-nav' : 'hide-nav'" id="navbarSupportedContent">
         <form class="navbar-form text-center search-form" role="search" #search="ngForm" (ngSubmit)="onSubmit()">
             <div class="input-group">
-                <input type="search" class="form-control search-bar" placeholder="Search for an enterprise or candidate"
+                <input type="search" class="form-control search-bar" placeholder="Search"
                     name="search-query" [(ngModel)]="searchQuery">
                 <div class="input-group-append">
                     <input class="btn btn-success search-submit" type="submit" value="Search">
