--- a/in-linked/src/app/pages/job/job.component.scss
+++ b/in-linked/src/app/pages/job/job.component.scss
@@ -6,7 +6,10 @@
 
 .company-profile-photo {
     background-color: white;
-    border: 2px solid grey;
     height: 150px;
-    max-width: 200px;
+    max-width: 200px;box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 4px 15px 0 rgba(0, 0, 0, 0.05);
+}
+
+.section-edit {
+    margin-top: 1rem;
 }
